...

class CategoryTableViewController: UITableViewController {
    
    // nu wai fatty
    
    var arrayTocategory:[String] = [String]()
    //let swiftBlogs = ["IT","Japan","Myanmar"]
    
    let namesOfFood = [["What language used for making twitter?", "what is …..","what is ….."],
                       ["Tortilla", "Chimichanga", "Paella"],
                       ["Burek od mesa","Grah", "Janjetina"],
                       ["Tapas", "Churros", "Flan"],
                       ["Buche de Noel", "Cherry Cake", "Onion Soup"]]
...
