...
                                <rect key="frame" x="250" y="494" width="100" height="30"/>
                                <color key="backgroundColor" red="0.26270015242439282" green="0.39546738386412639" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="cAC-q9-RVj"/>
                                    <constraint firstAttribute="width" constant="100" id="wnQ-PS-BsE"/>
                                </constraints>
                                <state key="normal" title="Start">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="statbtnAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YfT-61-doY"/>
                                </connections>
                            </button>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YBq-J5-XRp">
                                <rect key="frame" x="20" y="253" width="560" height="30"/>
                                <color key="backgroundColor" red="0.26270015242439282" green="0.39546738386412639" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="4UC-fA-Uvq"/>
                                </constraints>
                                <state key="normal" title="RoR">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fNm-tH-M6I">
                                <rect key="frame" x="20" y="313" width="560" height="30"/>
                                <color key="backgroundColor" red="0.2627001524" green="0.39546738390000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
